<resources>
    <string name="app_name">Scroll Style Questionaire</string>
    <string name="write_here">Write Here</string>
    <string name="print">Print</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="_1_check_a_box_below">1. Check a box below…</string>
    <string name="check_this">check this</string>
    <string name="don_t_check_this">Don\'t check this</string>
    <string name="_2_click_on_this_radio">2. Click on this radio…</string>
    <string name="click_me">Click me</string>
    <string name="don_t_click_me">Don\'t Click me</string>
    <string name="_3_press_any_of_the_colors_below">3. Press any of the colors below…</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="pink">Pink</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="_4_what_do_you_want_to_write_here">4. What do you want to write here?</string>
</resources>
