<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">





        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:text="@string/_1_check_a_box_below"
            android:textColor="@android:color/black"
            android:textSize="20sp" />


        <CheckBox
            android:id="@+id/check_this"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_this" />

        <CheckBox
            android:id="@+id/check_this2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_check_this" />

        <CheckBox
            android:id="@+id/check_this3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_check_this" />

        <CheckBox
            android:id="@+id/check_this4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_check_this" />

        <CheckBox
            android:id="@+id/check_this5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_check_this" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/_2_click_on_this_radio"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/rad_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/click_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_me" />

            <RadioButton
                android:id="@+id/click_me2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_click_me" />

            <RadioButton
                android:id="@+id/click_me3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_click_me" />

            <RadioButton
                android:id="@+id/click_me4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_click_me" />

            <RadioButton
                android:id="@+id/click_me5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_click_me" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/_3_press_any_of_the_colors_below"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/b_red"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/turquoise"
                android:gravity="center"
                android:text="@string/red" />

            <TextView
                android:id="@+id/b_blue"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/turquoise"
                android:gravity="center"
                android:text="@string/blue" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/b_green"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/turquoise"
                android:gravity="center"
                android:text="@string/green" />

            <TextView
                android:id="@+id/b_pink"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/turquoise"
                android:gravity="center"
                android:text="@string/pink" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/b_white"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/turquoise"
                android:gravity="center"
                android:text="@string/white" />

            <TextView
                android:id="@+id/b_black"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/turquoise"
                android:gravity="center"
                android:text="@string/black" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_4_what_do_you_want_to_write_here"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/my_write"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/write_here"
            android:paddingBottom="10dp" />


        <TextView
            android:id="@+id/b_print"
            style="@android:style/Widget.Button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/print"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/b_reset"
                style="@android:style/Widget.Button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:layout_marginTop="10dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/b_submit"
                style="@android:style/Widget.Button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_marginTop="10dp"
                android:layout_weight="1"/>

        </LinearLayout>




    </LinearLayout>


</ScrollView>